// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgramCard should render correctly for live 1`] = `
<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 ihgFOy"
      >
        <a
          class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            <span
              role="text"
            >
              <span
                aria-hidden="true"
                class="StyledSpan-sc-5gbj69-0 gGPbYG"
                dir="ltr"
              >
                LIVE 
              </span>
              <span
                class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                lang="en-GB"
              >
                Live, 
              </span>
            </span>
            Could a computer ever create better art than a human?
            <span
              class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 kqgECY"
            >
              August 27, 2019
            </span>
          </span>
        </a>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 kPODHC"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly for next 1`] = `
<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 hlWgZt"
      >
        <span
          class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
          role="text"
        >
          <span
            class="NextLabel-sc-6oo8lp-5 kzBJH"
            dir="ltr"
          >
            NEXT 
          </span>
          Could a computer ever create better art than a human?
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
          >
            , 
            14:54
            , 
          </span>
          <span
            class="TitleWrapper-sc-6oo8lp-0 gaBXGU"
          >
            August 27, 2019
          </span>
        </span>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 glhZpD"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 gqyxry"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly for onDemand 1`] = `
<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 ihgFOy"
      >
        <a
          class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            Could a computer ever create better art than a human?
            <span
              class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 kqgECY"
            >
              August 27, 2019
            </span>
          </span>
        </a>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 fastOq"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly in RTL 1`] = `
<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 bQOdKp"
      >
        <a
          class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
          href="/arabic/articles/c1er5mjnznzo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
            <span
              class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            >
              , 
              ١٣:٥٤
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
            >
              ٢٧ أغسطس ٢٠١٩
            </span>
          </span>
        </a>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
      >
        هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 bVNTNn"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
        datetime="PT30M"
        dir="rtl"
      >
        <span
          class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
        >
           المدة الزمنية ٣٠،٠٠ 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          ٣٠:٠٠
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly without summary 1`] = `
<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 ihgFOy"
      >
        <a
          class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            <span
              role="text"
            >
              <span
                aria-hidden="true"
                class="StyledSpan-sc-5gbj69-0 gGPbYG"
                dir="ltr"
              >
                LIVE 
              </span>
              <span
                class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
                lang="en-GB"
              >
                Live, 
              </span>
            </span>
            Could a computer ever create better art than a human?
            <span
              class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 kqgECY"
            >
              August 27, 2019
            </span>
          </span>
        </a>
      </h3>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 kPODHC"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;
